feat(event) : add image into event
